css/story.css
:root {
  --story-width: min(65vh / 9 * 16, 95vw);
  --dialog-size: 6em;
}
@font-face {
  font-family: "vn";
  src: url("../../webfonts/vn.woff2") format("woff2");
}
.dialog {
  /*font-family: "vn";*/
}
.scene {
  width: 100%;
  padding: 0;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  position: relative;
  background-image: var(--background-image-url);
  background-size: var(--story-width) auto;
  background-attachment: fixed;
  background-position: center calc(50% + var(--topNav-height) / 2);
  background-repeat: no-repeat;
}
/* set minHeight according to aspect ratio, default to 16:9 */
.scene {
  --bgwidth: 16;
  --bgheight: 9;
  min-height: calc(var(--story-width) / var(--bgwidth) * var(--bgheight));
}
.scene.video {
  /* wider ratio for videos */
  min-height: calc(var(--story-width) / 13 * 6);
}
.scene.multipart {
  min-height: calc(1.5 * var(--story-width) / var(--bgwidth) * var(--bgheight));
}
.scene:before {
  content: "";
  background-color: var(--main-background-color);
  background-image: var(--background-image-url);
  background-size: cover;
  background-attachment: fixed;
  background-position: center calc(50% + var(--topNav-height) / 2);
  background-repeat: no-repeat;
  width: 100%;
  height: 100%;
  position: absolute;
  filter: blur(5px);
  z-index: -1;
}
.scene.blockerPadded:after {
  content: "";
  flex: 1;
  background-color: var(--fill-blocker);
}
.scene:after {
  transition: opacity 0.5s;
}
.scene.multipart {
  background-attachment: fixed, fixed;
  background-size: calc(0.75 * var(--story-width)) auto,
    calc(0.75 * var(--story-width)) auto;
  background-position: calc(50% - 0.375 * var(--story-width))
      calc(50% + var(--topNav-height) / 2),
    calc(50% + 0.375 * var(--story-width)) calc(50% + var(--topNav-height) / 2);
  background-repeat: no-repeat, no-repeat;
}
.scene.multipart:before {
  /* this doesn't work as expected, only one bg will actually show due to cover + fixed (they overlap)*/
  background-attachment: fixed, fixed;
  background-size: cover, cover;
  background-position: center calc(50% + var(--topNav-height) / 2),
    center calc(50% + var(--topNav-height) / 2);
  background-repeat: no-repeat, no-repeat;
}
.scenebreak {
  width: 100%;
  height: 2em;
  background: var(--main-background-color);
}
.blocker {
  width: 100%;
}
.blocker.fadein {
  background: radial-gradient(
    200% 200% at 50% 0%,
    var(--start-color) 25%,
    var(--end-color) 50%
  );
}
.blocker.fadeout {
  background: radial-gradient(
    200% 200% at 50% 100%,
    var(--end-color) 25%,
    var(--start-color) 50%
  );
}
#storyDisp {
  display: flex;
  flex-direction: column;
  max-width: var(--story-width);
  margin: 0 auto;
}
.dialog {
  display: flex;
  margin: 0;
  padding: 0.4em 0.4em;
  justify-content: center;
  transition: opacity 0.5s;
  opacity: 1;
}
.blocker {
  transition: opacity 0.5s;
}
.dialog.blocker {
  padding: 0;
}
.dialog.narration .text {
}
.dialog.hidden {
  visibility: hidden;
  position: absolute;
  opacity: 0;
}
.dialog:after,
.dialog:before {
  content: "";
  flex: 0 99;
}
.dialog-right,
.dialog-left {
  flex: 1;
  display: flex;
  min-width: -webkit-min-content;
  min-width: calc(var(--dialog-size) + 1em);
}
.dialog-left {
  justify-content: flex-end;
}
.avatar {
  width: var(--dialog-size);
  height: var(--dialog-size);
  opacity: 0.75;
  margin: 0 0.5em;
  overflow: hidden;
  position: relative;
  border-radius: 0.3em;
  flex-shrink: 0;
  align-self: center;
}
.avatar.active {
  opacity: 1;
}
.avatar.initial img {
  left: 0 !important;
  top: 0 !important;
  width: 100% !important;
  height: 100% !important;
  transform: scale(1) !important;
}
.avatar.unknown img {
  left: -265px !important;
  top: -41px !important;
  transform: scale(1.2) !important;
  filter: brightness(0);
}
.avatar.mystery img {
  filter: brightness(0);
}
.avatar img {
  width: 100%;
  height: 100%;
}
.avatar.npc img {
  position: absolute;
  /* width: initial; */
  /* height: initial; */
  /* margin: auto; */
  /* width: 200px; */
  /* height: 200px; */
  /* transform: translate(-25%,25%) scale(1.5); */
  /* width: 300px; */
  /* height: 300px; */
  /* transform: translate(-33%, 0); */
  width: 1024px;
  height: 1024px;
  /* transform: scale(.5) translate(-50%,-50%) translate(-40%,0); */
  transform-origin: top left;
  transform: scale(0.5);
  left: -205px;
  top: 0px;
}
.text {
  box-sizing: border-box;
  background: #000b;
  flex: 0;
  flex-basis: 35em;
  padding: 0.2em 0.5em;
  display: flex;
  font-size: 1.3em;
  flex-direction: column;
  justify-content: flex-start;
  border-radius: 0.3em;
  min-height: calc(var(--dialog-size) / 2 / 1.3);
}
.text:not([data-name=""]) {
  min-height: calc(var(--dialog-size) / 1.3);
}
/* ... */

